language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__higlights_for_prefix_string_suffix_variable_nested_in_tuple.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\nfn main() {\n  case #(\"1-wibble\", 0) {\n    #(\"1\" <> rest, _) -> rest\n    _ -> \"\"\n  }\n}\n"
---
-- app.gleam

fn main() {
  case #("1-wibble", 0) {
    #("1" <> rest, _) -> rest
             ↑▔▔▔        ▔▔▔▔
    _ -> ""
  }
}
