language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__higlights_for_private_type.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\ntype Wibble { Wibble }\n\nfn main() -> Wibble {\n  todo\n}\n\nfn wobble(w: Wibble) {\n  todo\n}\n"
---
-- app.gleam

type Wibble { Wibble }
     ↑▔▔▔▔▔           

fn main() -> Wibble {
             ▔▔▔▔▔▔  
  todo
}

fn wobble(w: Wibble) {
             ▔▔▔▔▔▔   
  todo
}
