language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__higlights_for_private_type_variant.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\ntype Wibble { Wibble }\n\nfn main() {\n  let _ = Wibble\n  Wibble\n}\n\nfn wobble() {\n  Wibble\n  wobble()\n}\n"
---
-- app.gleam

type Wibble { Wibble }
              ↑▔▔▔▔▔  

fn main() {
  let _ = Wibble
          ▔▔▔▔▔▔
  Wibble
  ▔▔▔▔▔▔
}

fn wobble() {
  Wibble
  ▔▔▔▔▔▔
  wobble()
}
