language-server/src/tests/snapshots/gleam_language_server__tests__document_highlight__higlights_for_public_type.snap
---
source: language-server/src/tests/document_highlight.rs
expression: "\nimport mod.{type Wibble}\n\nfn wobble() -> Wibble {\n  todo\n}\n\nfn other(w: mod.Wibble) {\n  todo\n}\n"
---
-- mod.gleam

pub type Wibble { Wibble }

pub fn main() -> Wibble {
  todo
}


-- app.gleam

import mod.{type Wibble}
                 ▔▔▔▔▔▔ 

fn wobble() -> Wibble {
               ↑▔▔▔▔▔  
  todo
}

fn other(w: mod.Wibble) {
                ▔▔▔▔▔▔   
  todo
}
